bandaid fix for overflow issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,7 @@ table {
 
 body {
   font-family: "lato", sans-serif;
+  overflow-x: hidden;
 }
 
 .container {
