--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -1,6 +1,7 @@
 @use "../abstracts" as *;
 body {
   font-family: 'lato', sans-serif;
+  overflow-x: hidden;
 }
 
 .container {
